# Lisp

./: CMakeLists.txt  main.cpp
src/: Constants.h
src/Evaluation/: Evaluation.cpp  Evaluation.h
src/buildins/: Buildins_Conditinals.h  Buildins_Function.h  LvalBuildins.h  LvalBuiltins.h  buildins.h  buildins_Conditinals.h  buildins_File.h  buildins_Function.h  buildins_Internals.h  buildins_List.h  buildins_Math.h  buildins_Misc.h
src/environment/: ValueHolder.cpp  ValueHolder.h
src/evaluation/: evaluation.h
src/parser/: Lval.cpp  Lval.h  Parser.cpp  Parser.h
standardLib/: standard.lspy
tests/: full.test  test.test
